--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,16 +32,11 @@
 
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">@brand</a>
-        </div>
-    </div>
-</nav>
-
 <div class="container newsitem-search">
-    <div class="well search-well col-sm-4 col-xs-12 text-right pull-right">
+    <div class="logo col-lg-4 col-md-5 col-sm-6 col-xs-12">
+        <img src='@routes.Assets.versioned("images/SKy-Sports-Logo.svg")' class="img-responsive" />
+    </div>
+    <div class="well search-well col-lg-4 col-md-5 col-sm-6 col-xs-12 text-right pull-right">
         <form method="" action="" class="form-inline">
             <div class="form-group col-sm-9">
                 <input type="text" name="searchTerm" id="searchTerm" class="form-control" placeholder="Search" style="min-width: 100% !important" />
